fixed alignfull after kas updates

--- a/src/blocks/block-grid-container/styles/style.scss
+++ b/src/blocks/block-grid-container/styles/style.scss
@@ -218,8 +218,6 @@
 	.page-template-default .entry-content>.c9-grid {
 		width: 100vw;
 		max-width: 100vw;
-		margin-left: calc((-100vw + 100%) / 2);
-		margin-right: calc((-100vw + 100%) / 2);
 	}
 
 	.c9-grid .container.alignwide {
@@ -234,7 +232,6 @@
 
 	.page-template-default .entry-content>.c9-grid .container-fluid {
 		width: 100%;
-		max-width: 100vw;
 		padding-left: 0px;
 		padding-right: 0px;
 	}
